	FIXED - Scale numerals honour locale (thanks again, shd)
	FIXED - THold plugin check failed with Thold 0.4.1 (PA 2.x, actually)
	FIXED - Uninitialized variable in ReadData when plugin is disabled
	FIXED - Zero-length link check didn't include offsets (thanks Ryan Botoluzzi)
	FIXED - Cacti-pick should get right rra path for packagers that move the rra directory (e.g. Ubuntu, Debian *again*)
	ADDED - Option of a dropdown selector to navigate between maps (in full-size view)
	ADDED - Maps can be organised into groups in Cacti plugin. These appear
			as tabs in the UI for viewing maps.
	ADDED - Extra variables can be defined per-group, so all maps in a group can have similar settings (e.g. a "24hr average" tab).
	ADDED - INCLUDE keyword to include a file of common definitions (based on work by BorisL)
			(NOTE: this can confuse the editor sometimes - see the manual page for INCLUDE)
	ADDED - Warning for maps that contain OVERLIBGRAPH but not 'HTMLSTYLE overlib'
	ADDED - SCALE will accept values below 0, and also above 100
	ADDED - USESCALE has two new options: absolute and percent, which allows you to have a SCALE of absolute values
	ADDED - New datasource plugin to support statistics from TheWitness's DSStats Cacti Plugin. This gets you daily,weekly,monthly and annual stats with no complicated rrdtool stuff.


0.96a	FIXED - New z-ordering code did not work correctly on PHP4. This broke (at least) the editor. (thanks toe_cutter)
	FIXED - \n is no longer treated as a newline in TARGETs (thanks NetAdmin)
	FIXED - KILO was broken completely between 0.95b and 0.96 (thanks Jethro Binks)
	FIXED - Link comments in certain positions could cause div-by-zero errors. (thanks again Jethro)
	FIXED - USEICONSCALE didn't colorise (broken between 0.95b and 0.96 again) (thanks colejv)
	FIXED - Managed to make LABELOFFSET case-sensitive.

0.96	ADDED - TEMPLATE allows a node or link to copy it's settings from another, instead of from DEFAULT.