@@ -1,7 +1,5 @@
 # Automatically generated by php-weathermap v0.96dev
 
-SET rrd_use_poller_output 1
-
 FONTDEFINE 100 docs/example/Vera.ttf 10
 
 BACKGROUND images/bw_gradient_1024.png
@@ -58,18 +56,18 @@ NODE node2
 	LABEL NODE 2
 	POSITION 360 240
 
-NODE node
+NODE node3
 	LABEL NODE 3
 	POSITION 502 69
 
 
 # regular LINKs:
 LINK node1-node2
-	TARGET /usr/local/share/cacti/rra/local_traffic_in_71.rrd
+	TARGET static:10M:20M
 	NODES node1 node2
 
-LINK node2-node
-	NODES node2 node
+LINK node2-node3
+	NODES node2 node3
 	BANDWIDTH 2M
 
 
