@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="refresh" content="300" /><title>Network Weathermap</title></head><body><div class="weathermapimage" style="margin-left: auto; margin-right: auto; width: 800px;" ><img id="wmapimage" src="test.png" width="800" height="600" border="0" usemap="#weathermap_imap"/></div><map name="weathermap_imap" id="weathermap_imap"><area id="NODE:n1:0"  href="http://www.google.com/"  shape="rect" coords="91,92,109,109" />
-<area id="NODE:n2:0"  nohref  shape="rect" coords="191,192,209,209" />
-<area id="LINK:l1:3"  nohref  shape="rect" coords="104,116,146,135" />
-<area id="LINK:l1:2"  nohref  shape="rect" coords="154,166,196,185" />
-<area id="LINK:l1:0"  nohref  shape="poly" coords="202,197,201,195,199,193,196,191,194,188,191,186,188,183,185,180,182,176,179,173,175,169,171,166,168,162,164,158,164,158,166,155,150,150,155,166,158,164,158,164,162,168,166,171,169,175,173,179,176,182,180,185,183,188,186,191,188,194,191,196,193,199,195,201,197,202" />
-<area id="LINK:l1:1"  nohref  shape="poly" coords="102,97,106,100,108,103,111,105,113,108,116,111,119,114,123,117,126,120,130,124,133,128,137,131,141,135,144,133,150,150,133,144,135,141,131,137,128,133,124,130,120,126,117,123,114,119,111,116,108,113,105,111,103,108,100,106,97,102" />
-</map><hr /><span id="byline">Network Map created with <a href="http://www.network-weathermap.com/?vs=0.96">PHP Network Weathermap v0.96</a></span></body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="refresh" content="300" /><title>Title</title></head><body><div class="weathermapimage" style="margin-left: auto; margin-right: auto; width: 300px;" ><img id="wmapimage" src="test.png" width="300" height="105" border="0" usemap="#weathermap_imap"/></div><map name="weathermap_imap" id="weathermap_imap"><area id="NODE:a:0"  nohref  shape="rect" coords="-2,18,82,32" />
+<area id="NODE:b:0"  nohref  shape="rect" coords="229,53,312,67" />
+<area id="NODE:llnw2:0"  nohref  shape="rect" coords="350,70,385,85" />
+<area id="LINK:gigabitethernet/1:0"  nohref  shape="poly" coords="271,53,267,52,262,51,257,51,251,50,245,49,238,48,231,47,224,45,216,44,208,43,200,42,191,40,183,39,184,32,155,42,180,60,181,53,189,54,197,56,206,57,214,58,222,59,229,60,236,62,243,63,249,63,255,64,260,65,265,66,268,66" />
+<area id="LINK:gigabitethernet/1:1"  nohref  shape="poly" coords="41,18,49,19,54,20,60,21,66,21,73,22,80,24,87,25,95,26,103,27,112,28,128,31,129,24,155,42,125,52,126,45,109,42,101,41,93,40,85,39,78,37,71,36,64,35,58,34,52,33,47,33,38,31" />
+</map><hr /><span id="byline">Network Map created with <a href="http://www.network-weathermap.com/?vs=0.97dev">PHP Network Weathermap v0.97dev</a></span></body></html>
